--- a/publishers.html
+++ b/publishers.html
@@ -7,7 +7,7 @@ title: Publishers
 <ul>
   {% for publisher in site.publishers %}
     <li>
-      <h2><a href="{{ publisher.url }}">{{ publisher.name }}</a></h2>
+      <h2><a href="{{ publisher.url | relative_url }}">{{ publisher.name }}</a></h2>
       <h3>{{ publisher.position }}</h3>
       <p>{{ publisher.content | mardownify }}</p>
     </li>
