--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,10 @@ title: Blog
             <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
           </h2>
           <span class="leading-relaxed mb-8">{{ post.excerpt }}</span>
+          <span>
+            {{ post.date | date_to_string }} | 
           {% include partial/publisher_ref.html pub=post.publisher %}
+          </span>
         </div>
       {% endfor %}
       </div>
