--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: Blog
 ---
   <section class="cm-gray-2 body-font min-h-screen">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="section-container">
       <h1 class="header-text title-font mb-4 cm-gray-2">InvenTree Blog</h1>
       <div class="flex flex-wrap -m-12">
 
