--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Blog
+permalink: /blog
 ---
   <section class="cm-gray-2 body-font min-h-screen">
-    <div class="pt-3 pb-0 section-container">
       <h1 class="header-text title-font mb-4 cm-gray-2">InvenTree Blog</h1>
       <div class="flex flex-wrap">
 
