--- a/plugins.html
+++ b/plugins.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Plugins
+permalink: /plugins
 ---
 <div class="section-container">
   <h1 class="header-text title-font mb-4 cm-gray-1">Plugins Repository</h1>
