fix spacing on plugin

--- a/plugins.html
+++ b/plugins.html
@@ -3,7 +3,7 @@ layout: default
 title: Plugins
 permalink: /plugins
 ---
-<div class="section-container">
+<div class="pt-3 pb-1 section-container">
   <h1 class="header-text title-font mb-4 cm-gray-1">Plugins Repository</h1>
       {% for plugin in site.plugins %}
         {% include plugin_card.html plugin=plugin %}
