--- a/plugins.html
+++ b/plugins.html
@@ -4,7 +4,7 @@ title: Plugins
 permalink: /plugins
 ---
 <div class="pt-3 pb-1 section-container">
-  <h1 class="header-text title-font mb-4 cm-gray-1">Plugins Repository</h1>
+  <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin Repository</h1>
       {% for plugin in site.plugins %}
         {% include plugin_card.html plugin=plugin %}
       {% endfor %}
