--- a/blog.html
+++ b/blog.html
@@ -1,25 +1,7 @@
 ---
-layout: default
+layout: collection/collection_index
 title: Blog
+title_text: InvenTree Blog
 permalink: /blog
+collection: posts
 ---
-  <section class="cm-gray-2 body-font">
-    <div class="pt-3 pb-1 section-container">
-      <h1 class="header-text title-font mb-4 cm-gray-2">InvenTree Blog</h1>
-      <div class="flex flex-wrap">
-
-      {% for post in site.posts %}
-        <div class="p-6 md:w-1/2 flex flex-col items-start">
-          <h2 class="header-text title-font mb-4 cm-gray-1">
-            <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-          </h2>
-          <span class="leading-relaxed mb-4">{{ post.excerpt | strip_html | strip_newlines | truncate: 156  }}</span>
-          <span>
-            {{ post.date | date_to_string }} | 
-          {% include partial/publisher_ref.html pub=post.publisher %}
-          </span>
-        </div>
-      {% endfor %}
-      </div>
-    </div>
-  </section>
