deploy: 601e35a1286f34a8ae629cb7f16c557865ed3d94

--- a/alternatives/index.html
+++ b/alternatives/index.html
@@ -66,9 +66,9 @@
   <li>
 <a href="https://partkeepr.org/">Partkeepr</a> - one of the OG OSS inventory solutions</li>
   <li>
-<a href="https://partsbox.com/">Partsbox</a> <code class="language-plaintext highlighter-rouge">/for profit/</code> nice interface and reasonable priced for SMEs</li>
+<a href="https://partsbox.com/">Partsbox</a> <code class="language-plaintext highlighter-rouge">for profit</code> nice interface and reasonable priced for SMEs</li>
   <li>
-<a href="https://bomist.com/">Bomist</a> <code class="language-plaintext highlighter-rouge">/for profit/</code> free version with limited function</li>
+<a href="https://bomist.com/">Bomist</a> <code class="language-plaintext highlighter-rouge">for profit</code> free version with limited function</li>
 </ul>
 
 <p>Asset Managemnt:</p>
@@ -82,7 +82,7 @@
 <p>Other:</p>
 <ul>
   <li>
-<a href="https://de.wikipedia.org/wiki/Microsoft_Excel">Excel</a> <code class="language-plaintext highlighter-rouge">/for profit/</code> be honest to yourself - could you handle it with a spreadsheet?</li>
+<a href="https://de.wikipedia.org/wiki/Microsoft_Excel">Excel</a> <code class="language-plaintext highlighter-rouge">for profit</code> be honest to yourself - could you handle it with a spreadsheet?</li>
 </ul>
 
 </article>
