deploy: 126a5b4d1e646bbfdb9187369aabf127bfe39983

--- a/index.html
+++ b/index.html
@@ -332,6 +332,21 @@
 	<span id="mce-MMERGE2-HELPERTEXT" class="helper_text">Your GitHub username - totally optional</span>
 </div>
 <div class="mc-field-group input-group">
+    <strong>Send me surveys  <span class="asterisk">*</span>
+</strong>
+    <ul>
+<li>
+    <input type="radio" value="YES" name="MMERGE3" id="mce-MMERGE3-0">
+    <label for="mce-MMERGE3-0">YES</label>
+</li>
+<li>
+    <input type="radio" value="NO" name="MMERGE3" id="mce-MMERGE3-1">
+    <label for="mce-MMERGE3-1">NO</label>
+</li>
+</ul>
+    <span id="mce-MMERGE3-HELPERTEXT" class="helper_text">Do you want to receive short questions from the team?</span>
+</div>
+<div class="mc-field-group input-group">
     <strong>Email Format </strong>
     <ul>
 <li>
