--- a/newsletter.html
+++ b/newsletter.html
@@ -55,22 +55,21 @@
 
         
     </div>
-</header> <!-- Begin Mailchimp Signup Form -->
+</header> <div class="justify-center">
+    <div>
+<!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-
 <style type="text/css">
 	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:600px;}
 	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
-
 <style type="text/css">
 	#mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
 	#mergeRow-gdpr {margin-top: 20px;}
 	#mergeRow-gdpr fieldset label {font-weight: normal;}
 	#mc-embedded-subscribe-form .mc_fieldset{border:none;min-height: 0px;padding-bottom:0px;}
 </style>
-
 <div id="mc_embed_signup">
 <form action="https://Inventree.us12.list-manage.com/subscribe/post?u=5919cec8a3ffd28a1d60e0889&amp;id=32a53e46f9&amp;f_id=0055b0e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
     <div id="mc_embed_signup_scroll">
@@ -148,7 +147,8 @@
 </div>
 
 <!--End mc_embed_signup-->
-
+</div>
+</div>
 
     </div>
 
