--- a/newsletter.html
+++ b/newsletter.html
@@ -55,7 +55,7 @@
 
         
     </div>
-</header> <div class="flex justify-around">
+</header> <div class="flex justify-around justify-center">
     <div>
 <!-- Begin Mailchimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
