--- a/plugins.html
+++ b/plugins.html
@@ -8,7 +8,7 @@ permalink: /plugins
 
 <div class="pt-3 pb-1 section-container">
   <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin Repository</h1>
-      {% for plugin in site.plugins %}
+      {% for plugin in site.repo %}
         {% include plugin_card.html plugin=plugin %}
       {% endfor %}
 </div>
