deploy: 370c23d514eb6898c13b6ccab9b8a924f16286bd

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </section>
 
 <section class="cm-gray-2 body-font">
-  <div class="container px-5 py-24 mx-auto">
+  <div class="container px-5  mx-auto">
     
     <div class="flex flex-col text-center w-full mb-20">
       <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree builds it vast functions on top of a few core workflows</h1>
