deploy: 79ec6ff4a06726d071f430652409999709e2f718

--- a/contribute.html
+++ b/contribute.html
@@ -33,7 +33,7 @@
 {"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"Contribute","url":"/inventree-website/contribute.html"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <script defer data-domain="matmair.github.io" src="https://plausible.io/js/script.outbound-links.js"></script>
+    <script async src="https://offen.invenhost.com/script.js" data-account-id="2c8697da-bb92-441b-82ee-ece2622295b2"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
