--- a/use/education.html
+++ b/use/education.html
@@ -23,14 +23,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools." />
 <meta property="og:description" content="InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools." />
-<link rel="canonical" href="/use/education.html" />
-<meta property="og:url" content="/use/education.html" />
+<link rel="canonical" href="https://web1.invenhost.com/use/education.html" />
+<meta property="og:url" content="https://web1.invenhost.com/use/education.html" />
 <meta property="og:site_name" content="InvenTree" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="For Education" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"For Education","url":"/use/education.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"For Education","url":"https://web1.invenhost.com/use/education.html"}</script>
 <!-- End Jekyll SEO tag -->
 
     <script async src="https://offen.web1.invenhost.com/script.js" data-account-id="2c8697da-bb92-441b-82ee-ece2622295b2"></script>
