deploy: 8f179b0a286f528aef8190a7e5ca2d7760e8e2a8

--- a/about/team.html
+++ b/about/team.html
@@ -59,7 +59,32 @@
     
     <h2>The core team</h2>
     
-    <h1 id="todo">TODO</h1>
+    <h1 id="team">Team</h1>
+
+<p>InvenTree has had 40+ contributors since the project started in March 2017.</p>
+
+<h2 id="maintainer">Maintainer</h2>
+
+<h4 id="schrodingersgat">SchrodingersGat</h4>
+<p>Oliver is an Australian EE. He started InvenTree in 2017 and is the maintainer.
+<a href="https://github.com/SchrodingersGat">GitHub</a></p>
+
+<h2 id="active-team">Active Team</h2>
+
+<h4 id="eeintech">eeintech</h4>
+<p>Francois is an EE. He is part of the core team an maintainer of <a href="https://github.com/sparkmicro/Ki-nTree">Ki-nTree</a>.
+<a href="https://github.com/eeintech">GitHub</a></p>
+
+<h4 id="matmair">matmair</h4>
+<p>Matthias is an Austrian developer. He is part of the core team and focuses on <code class="language-plaintext highlighter-rouge">enterprise</code> enhancments.
+<a href="https://github.com/matmair">GitHub</a></p>
+
+<h2 id="contributors">Contributors</h2>
+<p>ToDo / Looking for suggestions.</p>
+
+<h3 id="disclaimer">Disclaimer</h3>
+<p>The list is in no way complete and only contains the most active devs when the website was created. If you feel someone is missing feel free to open an issue in the GitHub repo.</p>
+
 
 </article>
 
