--- a/extend/api.html
+++ b/extend/api.html
@@ -59,7 +59,16 @@
     
     <h2>API</h2>
     
-    <h1 id="todo">TODO</h1>
+    <h1 id="inventree-api">InvenTree API</h1>
+
+<p>InvenTree ships with an extensive REST API that is used by several native applications:</p>
+<ul>
+  <li>parts of the webinterface</li>
+  <li>InvenTree App (Android/iOS)</li>
+  <li>python module</li>
+</ul>
+
+<p>The API is self-documenting. More information is provided in the <a href="https://inventree.readthedocs.io/en/latest/api/api/">documentation</a>.</p>
 
 </article>
 
