--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="flex-grow sm:pl-8">
                         <h2 class="title-font font-medium text-lg cm-gray-1">eeintech</h2>
                         <h3 class="cm-gray-3 mb-3">Francois</h3>
-                        <p class="mb-4">Francois is an EE. He is part of the core team an maintainer of [Ki-nTree](https://github.com/sparkmicro/Ki-nTree).</p>
+                        <p class="mb-4">Francois is an EE. He is part of the core team an maintainer of Ki-nTree.</p>
                         <span class="inline-flex">
                           
                           &lt;a class="cm-gray-3" href="
@@ -239,7 +239,7 @@
                     <div class="flex-grow sm:pl-8">
                         <h2 class="title-font font-medium text-lg cm-gray-1">matmair</h2>
                         <h3 class="cm-gray-3 mb-3">Matthias</h3>
-                        <p class="mb-4">Matthias is an Austrian developer. He is part of the core team and focuses on `enterprise` enhancments.</p>
+                        <p class="mb-4">Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancments.</p>
                         <span class="inline-flex">
                           
                           &lt;a class="cm-gray-3" href="
