deploy: c187dd31bd521d520bf020098f67aff6a44d0042

--- a/about/team.html
+++ b/about/team.html
@@ -70,7 +70,7 @@
 <h3 id="active-team">Active Team</h3>
 
 <h4 id="eeintech">eeintech</h4>
-<p>Francois is an EE. He is part of the core team an maintainer of <a href="https://github.com/sparkmicro/Ki-nTree">Ki-nTree</a>.
+<p>Francois is an EE. He is part of the core team and the maintainer of <a href="https://github.com/sparkmicro/Ki-nTree">Ki-nTree</a>.
 <a href="https://github.com/eeintech">GitHub</a></p>
 
 <h4 id="matmair">matmair</h4>
