--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div class="flex-grow sm:pl-8">
                         <h2 class="title-font font-medium text-lg cm-gray-1">eeintech</h2>
                         <h3 class="cm-gray-3 mb-3">Francois</h3>
-                        <p class="mb-4">Francois is an EE. He is part of the core team an maintainer of Ki-nTree.</p>
+                        <p class="mb-4">Francois is an EE. He is part of the core team and the maintainer of Ki-nTree.</p>
                         <span class="inline-flex">
                           
                           <a class="cm-gray-3" href="https://github.com/eeintech" alt="learn more">GitHub</a>
