deploy: f3b6438603c73735fa60b92569b7c4eb91038836

--- a/about/team.html
+++ b/about/team.html
@@ -74,7 +74,7 @@
 <a href="https://github.com/eeintech">GitHub</a></p>
 
 <h4 id="matmair">matmair</h4>
-<p>Matthias is an Austrian developer. He is part of the core team and focuses on <code class="language-plaintext highlighter-rouge">enterprise</code> enhancments.
+<p>Matthias is an Austrian developer. He is part of the core team and focuses on <code class="language-plaintext highlighter-rouge">enterprise</code> enhancement.
 <a href="https://github.com/matmair">GitHub</a></p>
 
 <h3 id="contributors">Contributors</h3>
