--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <div class="flex-grow sm:pl-8">
                         <h2 class="title-font font-medium text-lg cm-gray-1">matmair</h2>
                         <h3 class="cm-gray-3 mb-3">Matthias</h3>
-                        <p class="mb-4">Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancments.</p>
+                        <p class="mb-4">Matthias is an Austrian developer. He is part of the core team and focuses on enterprise enhancement.</p>
                         <span class="inline-flex">
                           
                           <a class="cm-gray-3" href="https://github.com/matmair" alt="learn more">GitHub</a>
