--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="section-container">
         <div class="flex flex-col text-center w-full mb-20">
             <h1 class="text-2xl font-medium title-font mb-4 cm-gray-1 tracking-widest">OUR TEAM</h1>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">InvenTree has had 40+ contributors since the project started in March 2017.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">InvenTree has had 40+ contributors since the project started in March 2017. Here are some of the currently most active devs.</p>
         </div>
         <div class="flex flex-wrap -m-4">
 
