deploy: 4e0b18fce41f04dd8ca419d74ee03d45235c37b8

--- a/support.html
+++ b/support.html
@@ -77,7 +77,7 @@ Private questions (via DM, email, etc.) are generally not answered, use the publ
 
 <h2 id="paid-customisation--support">Paid Customisation / Support</h2>
 <p>If you use InvenTree for your business and require a support contract or want to fast track a feature request we have a list of developers and businesses willing to help out.
-Feel free to reach out to <code class="language-plaintext highlighter-rouge">admin &lt;AT&gt; inventree &lt;DOT&gt; ORG</code> - we will redirect you to a suitable contact.</p>
+Feel free to reach out to <code class="language-plaintext highlighter-rouge">support &lt;AT&gt; inventree &lt;DOT&gt; ORG</code> - we will redirect you to a suitable contact.</p>
 
 </article>
 
