deploy: cc944d71c18f27a0773bcb0c8a7ec5fa1e5750d8

--- a/plugins.html
+++ b/plugins.html
@@ -23,17 +23,17 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools." />
 <meta property="og:description" content="InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools." />
-<link rel="canonical" href="https://web1.invenhost.com/plugins" />
-<meta property="og:url" content="https://web1.invenhost.com/plugins" />
+<link rel="canonical" href="https://inventree.org/plugins" />
+<meta property="og:url" content="https://inventree.org/plugins" />
 <meta property="og:site_name" content="InvenTree" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Plugins" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"Plugins","url":"https://web1.invenhost.com/plugins"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"Plugins","url":"https://inventree.org/plugins"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <script async src="https://offen.web1.invenhost.com/script.js" data-account-id="2c8697da-bb92-441b-82ee-ece2622295b2"></script>
+    <script async src="https://offen.inventree.org/script.js" data-account-id="2c8697da-bb92-441b-82ee-ece2622295b2"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
