deploy: ee683a031a877c63b6e25c3eaf84dc91edcea006

--- a/extend/app.html
+++ b/extend/app.html
@@ -284,30 +284,32 @@
   });
   </script>
 
-<p>Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips. The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.</p>
+<section class="cm-gray-2 body-font"><div class="section-container">
 
-<h3 id="features">Features</h3>
+Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips. The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.
 
-<p>Core app features include:</p>
+### Features
 
-<ul>
-  <li>View and edit part and stock information with a blazingly fast interface</li>
-  <li>Perform stock control actions on the go</li>
-  <li>Barcode integrations simplify stock operations</li>
-  <li>Receive purchase orders and check in stock items</li>
-</ul>
+Core app features include:
 
-<h3 id="download">Download</h3>
+- View and edit part and stock information with a blazingly fast interface
+- Perform stock control actions on the go
+- Barcode integrations simplify stock operations
+- Receive purchase orders and check in stock items
 
-<p>The InvenTree app can be downloaded from either the Android or Apple app stores, or accessed via the links below:</p>
+### Download
 
-<p><span class="fab fa-android"></span> <a href="https://play.google.com/store/apps/details?id=inventree.inventree_app">Android Play Store</a>.</p>
+The InvenTree app can be downloaded from either the Android or Apple app stores, or accessed via the links below:
 
-<p><span class="fab fa-apple"></span> <a href="https://apps.apple.com/au/app/inventree/id1581731101#?platform=iphone">Apple App Store</a></p>
+<span class="fab fa-android"></span> [Android Play Store](https://play.google.com/store/apps/details?id=inventree.inventree_app).
 
-<h3 id="documentation">Documentation</h3>
+<span class="fab fa-apple"></span> [Apple App Store](https://apps.apple.com/au/app/inventree/id1581731101#?platform=iphone)
 
-<p>Mobile app documentation can be found on the <a href="https://docs.inventree.org/en/latest/app/app/">InvenTree documentation site</a>.</p>
+### Documentation
+
+Mobile app documentation can be found on the [InvenTree documentation site](https://docs.inventree.org/en/latest/app/app/).
+
+</div></section>
 
     </div>
 
