deploy: cd91d9b3556cb4e38f3f7863c743a855ba7d851c

--- a/contribute.html
+++ b/contribute.html
@@ -59,7 +59,7 @@
     
     <h2>Contribute</h2>
     
-    <p>InvenTree is an open source project which is supported by a small group of volunteer contributors. Developing and maintaining an open source project is a lot of work, and requires a lot of devloper time, a resouce which is quite scarce.</p>
+    <p>InvenTree is an open source project which is supported by a small group of volunteer contributors. Developing and maintaining an open source project is a lot of work, and requires a lot of developer time, a resource which is quite scarce.</p>
 
 <p>We welcome everyone to help with InvenTree however they can!</p>
 
@@ -74,7 +74,7 @@
 
 <h3 id="sponsor">Sponsor</h3>
 
-<p>If you or company use InvenTree, please consider sponsoring the project to show your support. Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!</p>
+<p>If you or your company uses InvenTree, please consider sponsoring the project to show your support. Sponsorships help to keep this project sustainable, and buys time for the core developers to commit to the project. A recurring or one off sponsorship is a great way to help InvenTree development to continue at full steam!</p>
 
 <ul>
   <li><a href="https://github.com/sponsors/inventree">Sponsor us on GitHub</a></li>
@@ -95,15 +95,17 @@ Reporting bugs is critical to improving the software. If you are able and willin
 
 <p>Contributions towards the core InvenTree code base are welcomed and encouraged; either extending current functionality, prodiving new features, or addressing outstanding issues.</p>
 
+<p>Check out the <a href="https://github.com/inventree/InvenTree/issues?q=is%3Aissue+is%3Aopen+label%3Astarter">starter issues</a> if you are looking for a good place to get started.</p>
+
 <h3 id="translate">Translate</h3>
 
 <p>InvenTree provides a translation layer for both the web interface and mobile app. Native language translation requires effort from translators to provide multi-lingual support. If you wish to translate InvenTree to a new language (or improve an existing translation), such contributions would be greatly appreciated!.</p>
 
-<p>Native language translation of the InvenTree web application is <a href="https://crowdin.com/project/inventree">community contributed via crowdin</a>.</p>
+<p>Native language translations of the InvenTree web application and mobile app are <a href="https://crowdin.com/project/inventree">community contributed via crowdin</a>.</p>
 
 <p><em><strong>Contributions are welcomed and encouraged!</strong>.</em></p>
 
-<p>To contribute to the translation effort, navigate to the <a href="https://crowdin.com/project/inventree">InvenTree crowdin project</a>, create a free account, and start making translations suggestions for your language of choice!</p>
+<p>To contribute to the translation effort, navigate to the <a href="https://crowdin.com/project/inventree">InvenTree crowdin project</a>, create a free account, and start making translations for your language of choice!</p>
 
 <h3 id="documentation">Documentation</h3>
 
