--- a/extend/integrate/index.html
+++ b/extend/integrate/index.html
@@ -63,6 +63,10 @@
 <ul>
   <li>
 <a href="https://github.com/sparkmicro/Ki-nTree">Ki-n-Tree</a> <em>KiCad</em> integration</li>
+  <li>
+<a href="https://github.com/rgilham/PK2InvenTree">PK2InvenTree</a> is an open-source tool for migrating an existing <a href="https://github.com/partkeepr/PartKeepr">PartKeepr</a> database to InvenTree.</li>
+  <li>
+<a href="https://github.com/EUdds/Digikey-Inventree-Integration">Digikey-Inventree-Integration</a> is a simple project that takes a digikey part number to creates a part in InvenTree.</li>
 </ul>
 
 </article>
