--- a/extend/app.html
+++ b/extend/app.html
@@ -284,32 +284,39 @@
   });
   </script>
 
-<section class="cm-gray-2 body-font"><div class="section-container">
+<article class="cm-gray-2 body-font section-container">
 
-Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips. The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.
+  <p>Native barcode support provides a multitude of context-sensitive stock control actions, allowing streamlined inventory management at your fingertips.<br>
+The app has been optimized for speed, providing instant access to stock knowledge and handy on-site functionality.</p>
 
-### Features
+  <h3 id="features">Features</h3>
 
-Core app features include:
+  <p>Core app features include:</p>
 
-- View and edit part and stock information with a blazingly fast interface
-- Perform stock control actions on the go
-- Barcode integrations simplify stock operations
-- Receive purchase orders and check in stock items
+  <ul>
+    <li>View and edit part and stock information with a blazingly fast interface</li>
+    <li>Perform stock control actions on the go</li>
+    <li>Barcode integrations simplify stock operations</li>
+    <li>Receive purchase orders and check in stock items</li>
+  </ul>
 
-### Download
+  <h3 id="download">Download</h3>
 
-The InvenTree app can be downloaded from either the Android or Apple app stores, or accessed via the links below:
+  <p>The InvenTree app can be downloaded from either the Android or Apple app stores, or accessed via the links below:</p>
 
-<span class="fab fa-android"></span> [Android Play Store](https://play.google.com/store/apps/details?id=inventree.inventree_app).
+  <p><span class="fab fa-android"></span> <a href="https://play.google.com/store/apps/details?id=inventree.inventree_app">Android Play Store</a>.</p>
 
-<span class="fab fa-apple"></span> [Apple App Store](https://apps.apple.com/au/app/inventree/id1581731101#?platform=iphone)
+  <p><span class="fab fa-apple"></span> <a href="https://apps.apple.com/au/app/inventree/id1581731101#?platform=iphone">Apple App Store</a></p>
 
-### Documentation
+  <h3 id="documentation">Documentation</h3>
 
-Mobile app documentation can be found on the [InvenTree documentation site](https://docs.inventree.org/en/latest/app/app/).
+  <p>Mobile app documentation can be found on the <a href="https://docs.inventree.org/en/latest/app/app/">InvenTree documentation site</a>.</p>
 
-</div></section>
+  <h3 id="code">Code</h3>
+
+  <p>The source code for the InvenTree app is available on <a href="https://github.com/inventree/inventree-app/">GitHub</a> under the MIT license.</p>
+
+</article>
 
     </div>
 
