deploy: f149e61244db5e8ebc34c40c7208c56a729a1270

--- a/extend/index.html
+++ b/extend/index.html
@@ -151,16 +151,16 @@
 
   <div class="bg-gray-100">
     <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-      <p class="cm-gray-3 text-sm text-center sm:text-left">© 2021-now InvenTree by<a href="https://github.com/inventree" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@inventree</a>— website made with ♥ by<a href="https://github.com/matmair" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@matmair</a></p>
+      <p class="cm-gray-2 text-sm text-center sm:text-left">© 2021-now InvenTree by<a href="https://github.com/inventree" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@inventree</a>— website made with ♥ by<a href="https://github.com/matmair" rel="noopener" class="cm-gray-2 ml-1" target="_blank">@matmair</a></p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-        <a href="https://github.com/inventree/inventree" alr="github repo" class="ml-3 cm-gray-3">
-          <img class="h-5 w-5" src="/assets/github.svg">
+        <a href="https://github.com/inventree/inventree" alt="github repo" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="GitHub logo" src="/assets/github.svg">
         </a>
-        <a href="https://reddit.com/r/inventree" alr="Reddit" class="ml-3 cm-gray-3">
-          <img class="h-5 w-5" src="/assets/reddit.svg">
+        <a href="https://reddit.com/r/inventree" alt="Reddit" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Reddit logo" src="/assets/reddit.svg">
         </a>
-        <a href="https://twitter.com/inventreedb" alr="Twitter" class="ml-3 cm-gray-3">
-          <img class="h-5 w-5" src="/assets/twitter.svg">
+        <a href="https://twitter.com/inventreedb" alt="Twitter" class="ml-3 cm-gray-3">
+          <img class="h-5 w-5" alt="Twitter logo" src="/assets/twitter.svg">
         </a>
       </span>
     </div>
