--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
     </div>
 </header>   <section class="cm-gray-2 body-font">
     <div class="pt-3 pb-1 section-container">
-      <h1 class="header-text title-font mb-4 cm-gray-2 flex items-end">InvenTree Blog<a href="feed.atom" alr="Atom feed" class="ml-3 cm-gray-3"><img class="h-5 w-5" src="/assets/rss.svg"></a>
+      <h1 class="header-text title-font mb-4 cm-gray-2 flex items-end">InvenTree Blog<a href="/blog/feed.atom" alr="Atom feed" class="ml-3 cm-gray-3"><img class="h-5 w-5" src="/assets/rss.svg"></a>
 </h1>
       <div class="flex flex-wrap">
 
