--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="p-4 lg:w-1/2">
                 <div class="h-full flex sm:flex-row flex-col sm:justify-start justify-center text-center sm:text-left">
                     <div class="flex-grow sm:pl-8">
-                        <h2 class="title-font font-medium text-lg cm-gray-1">SchrodingersGat</h2>
+                        <h2 class="title-font font-medium text-lg cm-gray-1">oliver</h2>
                         <h3 class="cm-gray-3 mb-3">Oliver</h3>
                         <p class="mb-4">Oliver is an Australian EE. He started InvenTree in 2017 and is the maintainer.</p>
                         <span class="inline-flex">
