deploy: 0990892553fd186e321713f6582f05eccb4aa734

--- a/deploy.html
+++ b/deploy.html
@@ -74,6 +74,10 @@
 
 <p>A <a href="https://docs.inventree.org/en/latest/start/intro/">bare metal installation guide</a> is provided for users who are looking for a low-level or custom installation.</p>
 
+<h3 id="cloud">Cloud</h3>
+
+<p>A member of the team provides a <a href="https://marketplace.digitalocean.com/apps/inventree?refcode=d6172576d014&amp;action=deploy">1-click app for InvenTree</a> on the DigitalOcean marketplace.</p>
+
 <h3 id="other-options">Other Options</h3>
 
 <p>The core InvenTree server is built using the widely used python-based framework <a href="https://djangoproject.com/">Django</a>. Therefore there are  deployment methods for nearly all plattforms and architectures. If you want to read more about InvenTree’s structure and a typical installation read the <a href="../contribute/code/architecture">architecture overview</a>.</p>
