--- a/support.html
+++ b/support.html
@@ -70,7 +70,8 @@ Private questions (via DM, email, etc.) are generally not answered, use the publ
 <ul>
   <li>Suggest the feature on the issue tracker as a <a href="https://github.com/inventree/InvenTree/issues/new?template=feature_request.yaml">Feature Request</a>
 </li>
-  <li>Create a <a href="extend/plugin/index.md">plugin</a>
+  <li>Implement the feature yourself, and contribute back to the project. InvenTree developers will happily help you work through any issues.</li>
+  <li>Create a <a href="/extend/plugin/index.md">plugin</a>
 </li>
   <li>Request a paid customisation</li>
 </ul>
