deploy: 702a7c0602c339be2881929d56efd7abeadd13b0

--- a/publishers.html
+++ b/publishers.html
@@ -12,6 +12,9 @@
 
 <script src="/assets/splide/js/splide.min.js"></script>
 
+<!-- Fontawesome integration -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
 <title>InvenTree - Publishers</title>
 <meta itemprop="description" name="description"
     content="InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of a..." />
