--- a/use/education.html
+++ b/use/education.html
@@ -36,7 +36,7 @@
 {"@context":"https://schema.org","@type":"WebPage","description":"InvenTree is an open-source inventory management system which provides intuitive parts management and stock control. It is at the center of an ecosystem of addins for EDA tools, API wrapper, deeply integrated plugins and 3rd party tools.","headline":"For Education","url":"/use/education.html"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <script async src="https://offen.inventree.org/script.js" data-account-id="2c8697da-bb92-441b-82ee-ece2622295b2"></script>
+    <script async defer src="https://umami.invenhost.com/umami.js" data-website-id="c713a5e9-25cf-4bb6-9e84-ceb041a53986"></script>
 </head>
 
 <body class="flex flex-col antialiased cm-gray-1 min-h-screen">
