deploy: bca89596ec3c6239acb7e774f4305b51ee4211dd

--- a/demo.html
+++ b/demo.html
@@ -62,7 +62,7 @@
     
     <h2>InvenTree Demo</h2>
     
-    <p>Want to take InvenTree for a spin? A working demo of InvenTree is available online at <strong><a href="https://demo.inventree.org">https://demo.inventree.org</a></strong></p>
+    <p>Want to take InvenTree for a spin? A working demo of InvenTree is available online at <a href="https://demo.inventree.org" class="umami--click--demo">https://demo.inventree.org</a></p>
 
 <h3 id="login-details">Login Details</h3>
 
@@ -82,25 +82,25 @@
       <td>allaccess</td>
       <td>nolimits</td>
       <td>View / create / edit all pages and items</td>
-      <td><a href="https://demo.inventree.org/accounts/login/?login=allaccess&amp;password=nolimits">log in</a></td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=allaccess&amp;password=nolimits" class="umami--click--demo-allaccess">log in</a></td>
     </tr>
     <tr>
       <td>reader</td>
       <td>readonly</td>
       <td>Can view all pages but cannot create, edit or delete database records</td>
-      <td><a href="https://demo.inventree.org/accounts/login/?login=reader&amp;password=readonly">log in</a></td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=reader&amp;password=readonly" class="umami--click--demo-reader">log in</a></td>
     </tr>
     <tr>
       <td>engineer</td>
       <td>partsonly</td>
       <td>Can manage parts, view stock, but no access to purchase orders or sales orders</td>
-      <td><a href="https://demo.inventree.org/accounts/login/?login=engineer&amp;password=partsonly">log in</a></td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=engineer&amp;password=partsonly" class="umami--click--demo-engineer">log in</a></td>
     </tr>
     <tr>
       <td>admin</td>
       <td>inventree</td>
       <td>Superuser account, access all areas plus administrator actions</td>
-      <td><a href="https://demo.inventree.org/accounts/login/?login=admin&amp;password=inventree">log in</a></td>
+      <td><a href="https://demo.inventree.org/accounts/login/?login=admin&amp;password=inventree" class="umami--click--demo-admin">log in</a></td>
     </tr>
   </tbody>
 </table>
