--- a/publishers.html
+++ b/publishers.html
@@ -5,11 +5,11 @@ title: Publishers
 <h1>Publishers</h1>
 
 <ul>
-  {% for publisher in site.publishers %}
+  {%- for publisher in site.publishers -%}
     <li>
       <h2><a href="{{ publisher.url | relative_url }}">{{ publisher.name }}</a></h2>
       <h3>{{ publisher.position }}</h3>
       <p>{{ publisher.content | mardownify }}</p>
     </li>
-  {% endfor %}
+  {%- endfor -%}
 </ul>
