deploy: eb2d4415c9e059eedf81ca167c5dd28fb3c2f478

--- a/extend/plugin/index.html
+++ b/extend/plugin/index.html
@@ -73,6 +73,7 @@ We expose some internal python APIs to speed up your development and keep the in
 <ul>
   <li><a href="https://pypi.org/project/inventree-brother-plugin/">Brother QL</a></li>
   <li><a href="https://github.com/SergeoLacruz/inventree-zebra-plugin">Zebra</a></li>
+  <li><a href="https://github.com/wolflu05/inventree-cups-plugin">Cups</a></li>
 </ul>
 
 <h3 id="plugin-repo">Plugin repo</h3>
