--- a/repo.html
+++ b/repo.html
@@ -1,10 +1,8 @@
 ---
 layout: default
-title: Plugins
-permalink: /plugins
+title: Plugin Repository
+permalink: /repo
 ---
-
-
 
 <div class="pt-3 pb-1 section-container">
   <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin Repository</h1>
