change reference to plugins

--- a/plugins.html
+++ b/plugins.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Plugin Repository
-permalink: /repo
+permalink: /plugins
 ---
 
 <div class="pt-3 pb-1 section-container">
