replace repository with list

--- a/plugins.html
+++ b/plugins.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Plugin Repository
+title: Plugin List
 permalink: /plugins
 ---
 
 <div class="pt-3 pb-1 section-container">
-  <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin Repository</h1>
+  <h1 class="header-text title-font mb-4 cm-gray-1">InvenTree Plugin List</h1>
   <p class="lead">
     InvenTree is a modular application and can be extended with plugins. This list is a collection of plugins that have been developed by the community.
     Beeing on this list does not mean that the plugin is officially supported by the InvenTree core team. We also do not check for security, privacy or performance issues or compatibility with the latest InvenTree version.
