change url pattern

--- a/categories.html
+++ b/categories.html
@@ -2,6 +2,6 @@
 layout: collection/collection_refpage
 title: Plugins by Category
 collection: repo
-permalink: /categories/
+permalink: /plugins/categories/
 reference: categories
 ---
