--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,6 @@
 layout: collection/collection_refpage
 title: Plugins by Tags
 collection: repo
-permalink: /tags/
+permalink: /plugins/tags/
 reference: tags
 ---
