deploy: 2b468b0996ea739ed171e7265315a007ee59fb2d

--- a/publishers.html
+++ b/publishers.html
@@ -63,6 +63,13 @@
 <ul>
   
     <li>
+      <h2><a href="/SergeoLacruz">Michael</a></h2>
+      <h3></h3>
+      <p>
+</p>
+    </li>
+  
+    <li>
       <h2><a href="/matmair">Matthias Mair</a></h2>
       <h3></h3>
       <p></p>
