deploy: da3e400d6156ffb1cb6375120bcab81b932fe001

--- a/publishers.html
+++ b/publishers.html
@@ -85,6 +85,14 @@
 
     </li>
   
+    <li>
+      <h2><a href="/sregeolacruz">Michael</a></h2>
+      <h3></h3>
+      <p></p>
+<p>Hardware engineer in Germany and vintage fan.</p>
+
+    </li>
+  
 </ul>
     </div>
 
