deploy: bdcbba51cf5d73240ce3f0eb04c530f70bed1753

--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@
           <span class="leading-relaxed mb-4">InvenTree 0.9.0 stable release now available!</span>
           <span>12 Dec 2022 | 
 
-<a href="/schrodingersgat">Oliver</a></span>
+<a href=""></a></span>
         </div>
       
         <div class="p-6 md:w-1/2 flex flex-col items-start">
@@ -84,7 +84,7 @@
           <span class="leading-relaxed mb-4">Introducing the new InvenTree website!</span>
           <span>14 Nov 2022 | 
 
-<a href="/schrodingersgat">Oliver</a></span>
+<a href=""></a></span>
         </div>
       
         <div class="p-6 md:w-1/2 flex flex-col items-start">
